--- a/templates/leads/leads.html
+++ b/templates/leads/leads.html
@@ -7,6 +7,9 @@
     <link href="{% static 'leads/css/leads.css' %}" rel="stylesheet">
 </head>
 <body class = "radiant_blue_green">
+
+    <p><a href="/leads/create/">Create a new lead</a></p>
+    <hr/>
     <h2>This are all of our leads</h2>
 
         {% for lead in leads %}
