Finished ModelForm to create a new lead.

--- a/templates/leads/lead_detail.html
+++ b/templates/leads/lead_detail.html
@@ -20,6 +20,8 @@
           <div class="individual-lead-grid-container_item">{{ lead.sources }} </div>
           <div class="individual-lead-grid-container_item">Special Files: </div>
           <div class="individual-lead-grid-container_item">{{ lead.special_files }} </div>
+          <div class="individual-lead-grid-container_item">Special Files: </div>
+          <div class="individual-lead-grid-container_item">{{ lead.special_files }} </div>
         </div>
 
 </body>
