--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -1,25 +1,19 @@
 {% extends 'index.html'%}
-
+{% load tailwind_filters %}
 {% block content %}
 
+<div class="max-w-lg mx-auto">
+    <a class="hover:text-blue-500" href="{% url 'leads:lead-list' %}">Go back to leads</a>
+    <div class="py-5 border-t border-gray-200">
+        <h1 class="text-4xl text-gray-800">Create a new lead</h1>
+    </div>
+    <form method="post" class="mt-5">
+        {% csrf_token %}
+        {{ form|crispy  }}
+        <button type='submit' class="w-full text-white bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">
+            Submit
+        </button>
+    </form>
+</div>
 
-    <h2>Create a new Lead</h2>
-
-<<a href="/leads">Go Back</a>
-
-        <form method = "POST" action="">
-            {% csrf_token %} <!-- csrf_token need for submiting forms -->
-            {{ form.as_p }}
-            <button type="submit">Submit</button>
-
-            <!-- will return a message if the post was successfully submitted or not-->
-            {% if messages %}
-            <ul class="messages">
-            {% for message in messages %}
-            <li  {% if message.tags %} class=" {{ message.tags }} " {% endif %}> {{ message }} </li>
-            {% endfor %}
-            </ul>
-            {% endif %}
-
-        </form>
-{% endblock %}
+{% endblock content %}
