--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
 <html lang="en">
+
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,16 +11,19 @@
 		<meta name="keywords" content="">
 		<meta name="author" content="">
 
-        <link rel="stylesheet" href="{% static 'css/styles.css' %}" type="text/css"
-    />
+		<link rel="stylesheet" href="{% static 'css/styles.css' %}">
 	</head>
-<body class = "radiant_blue_green">
 
-    <h2>Lead details for {{ lead.first_name }} {{ lead.last_name }}</h2>
-    
-    {% block content %}
+	<body class="bg-grey-lightest font-serif leading-normal tracking-normal">
 
-    {% endblock %}
+		<div class="container mx-auto">
+			<section class="flex items-center justify-center h-screen">
+				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
+			</section>
 
-</body>
+		</div>
+
+
+	</body>
+
 </html>
