renamed index to base.html

--- a/leads/templates/leads/lead_update.html
+++ b/leads/templates/leads/lead_update.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
     {% block content %}
     <h2>Update lead: {{ lead.first_name }} {{ lead.last_name }}</h2>
