Set STATIC_ROOT, rearranged static files.
-Added in urls   static location settings for debug False.

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
 		<meta name="keywords" content="">
 		<meta name="author" content="">
 
-        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
 	</head>
 <body class = "radiant_blue_green">
     {% include "navbar.html" %}
