--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,7 +1,8 @@
 {% extends 'base.html'%}
 
 {% block content %}
-    <section class="text-gray-600 body-font">
+  <div class="justify-evenly">
+    <section class="text-gray-600 body-font object-center">
       <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
         <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
         <div class="text-center lg:w-2/3 w-full">
@@ -18,4 +19,5 @@
         </div>
       </div>
     </section>
+  </div>
 {% endblock content %}
