--- a/agents/templates/agents/agent_list.html
+++ b/agents/templates/agents/agent_list.html
@@ -25,12 +25,11 @@
             </div>
             <div class="flex-grow">
                   <h2 class="text-gray-900 text-lg title-font font-medium mb-3">
-                    {{ agent.user.username }}
-                  </h2>
+                   {{ agent.user.username }}
                   <p class="leading-relaxed text-base">
                       Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.
                   </p>
-                  <a class="mt-3 text-green-500 inline-flex items-center" href="{% url 'agent:agent-detail' agent.pk %}">
+                  <a class="mt-3 text-green-500 inline-flex items-center" href="">
                       View this agent
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                       <path d="M5 12h14M12 5l7 7-7 7"></path>
