--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,9 +6,10 @@
       </svg>
       <span class="ml-3 text-xl">DjangoCRM</span>
     </a>
-    <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <a class='mr-5 hover:text-gray-900' href={% url "leads:lead-list"%}>
-          Leads</a>
+
+     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+      <a class='mr-5 hover:text-gray-900' href={% url "agents:agent-list"%}>Agents</a>
+      <a class='mr-5 hover:text-gray-900' href={% url "leads:lead-list"%}>Leads</a>
 
     </nav>
       {% if request.user.is_authenticated %}
