--- a/agents/templates/agents/agent_list.html
+++ b/agents/templates/agents/agent_list.html
@@ -29,7 +29,7 @@
                   <p class="leading-relaxed text-base">
                       Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.
                   </p>
-                  <a class="mt-3 text-green-500 inline-flex items-center" href="">
+                  <a class="mt-3 text-green-500 inline-flex items-center" href="{% url 'agents:agent-detail' agent.pk %}">
                       View this agent
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                       <path d="M5 12h14M12 5l7 7-7 7"></path>
