--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,9 +8,14 @@
     </a>
 
      <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <a class='mr-5 hover:text-gray-900' href={% url "agents:agent-list"%}>Agents</a>
-      <a class='mr-5 hover:text-gray-900' href={% url "leads:lead-list"%}>Leads</a>
-
+       {% if not request.user.is_authenticated %}
+          <a class="mr-5 hover:text-gray-900" href={% url 'signup' %} >Signup</a>
+        {% else %}
+         {% if request.user.is_organizer %}
+          <a class='mr-5 hover:text-gray-900' href={% url "agents:agent-list"%}>Agents</a>
+           {% endif %}
+          <a class='mr-5 hover:text-gray-900' href={% url "leads:lead-list"%}>Leads</a>
+        {% endif %}
     </nav>
       {% if request.user.is_authenticated %}
           Logged in as: {{ request.user.username }}
@@ -20,7 +25,7 @@
             <path d="M5 12h14M12 5l7 7-7 7"></path>
           </svg>
       {% else %}
-        <a class="mr-5 hover:text-gray-900" href={% url 'signup' %} >Signup</a>
+
         <a class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0" href={% url "login"%} >
             Login
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
